...
                        Image(systemName: TabItem.home.icon)
                            .font(.system(size: 22, weight: .bold, design: .rounded))
                        Text(TabItem.home.title)
                            .font(.headingSmall)
                    }
                    .accessibilityLabel(R.string.localizable.accessibilityHomeTab())
                    .accessibilityIdentifier("HomeTabButton")
                }
                .tag(TabItem.home)

                NavigationStack(path: $appRouter.libraryPath) {
                    LibraryView()
                        .navigationDestination(for: AppDestination.self) { destination in
...
                        Image(systemName: TabItem.library.icon)
                            .font(.system(size: 22, weight: .bold, design: .rounded))
                        Text(TabItem.library.title)
                            .font(.headingSmall)
                    }
                    .accessibilityLabel(R.string.localizable.accessibilityLibraryTab())
                    .accessibilityIdentifier("LibraryTabButton")
                }
                .tag(TabItem.library)

                NavigationStack(path: $appRouter.collectionsPath) {
                    CollectionsListView()
                        .navigationDestination(for: AppDestination.self) { destination in
...
